# sql-parser

./: Cargo.toml  Makefile  README.md  test-query.txt
src/: grammar.pest  lib.rs  main.rs
tests/: tests.rs
