[package]
name = "sql_parser_project"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This is a simple project to parse SQL queries using pest crate. Currently parser supports simple select queries whith where conditions."

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
thiserror = "1.0.68"
anyhow = "1.0.93"